# kaldi-aslp

./: .gitignore  README.md
aslp_scripts/: decode_batch_model.sh  gpu_monitor.py  log_analyse.sh  log_analyse_ctc.sh  machine.conf  make_feats.sh  mpi_log_analyse.sh  score_basic.sh
aslp_scripts/aslp_nnet/: decode.sh  prepare_feats_ali.sh  prepare_feats_ali_ctc.sh  prepare_feats_ali_parallel.sh  pretrain.sh  pretrain_cfsmn.sh  run_2dnn_2lstm.sh  run_2dnn_2lstm_drop.sh  run_blstm.sh  run_bn_dnn.sh  run_cfsmn.sh  run_cfsmn_pre.sh  run_cnn.sh  run_cnn_1dnn_2lstm.sh  run_ctc_blstm.sh  run_ctc_cnn_1dnn_2blstm.sh  run_ctc_cnn_1dnn_2lstm.sh  run_ctc_dnn.sh  run_dnn.sh  run_dnn_mpi.sh  run_eesen_ctc_cnn_1dnn_2blstm.sh  run_id_dnn.sh  run_lstm.sh  run_lstm_parallel.sh  run_mimo.sh  run_parallel.sh  train_scheduler.sh  train_scheduler_2workers.sh  train_scheduler_4workers.sh  train_scheduler_ctc.sh  train_scheduler_mimo.sh  train_scheduler_mpi.sh
aslp_scripts/cd_phone/: make_fake_mdl.sh  make_fake_topo.sh  make_fake_tree.sh  make_h3_graph.sh  prepare_cd_phone.sh  prepare_mono_phone.sh
aslp_scripts/ctc/: cluster_cd_phone.sh  make_ctc_graph.sh  make_fake_mdl.sh  make_fake_topo.sh  make_fake_tree.sh  prepare_cd_phone_ce.sh  prepare_cd_phone_ctc.sh  prepare_mono_phone_ce.sh  prepare_mono_phone_ctc.sh
aslp_scripts/kws/: evaluation_roc.py  gen_text_fst.py  generate_simulation_ali.py  plot_roc.py  prepare_feats_ali.sh  prepare_state_feats_ali.sh  run_custom_kws.sh  run_dnn_kws.sh  run_dnn_multiple_keyword.sh  run_dnn_one_keyword.sh  run_dnn_one_keyword_perturb_and_simulation.sh  run_dnn_one_keyword_perturb_and_simulation_state.sh  run_dnn_one_keyword_simulation.sh  run_dnn_xiaogua.sh  run_lstm_kws.sh  simulate.sh  text_graph.py
aslp_scripts/online/: database.py  decoder_client.py  main.cfg  main.py  start.sh
aslp_scripts/syllable/: ali_to_syllable.py  bind_lexicon.py  bind_syllable.py  convert_lexicon_to_syllable.py  prepare_syllable_ce.sh  prepare_syllable_ctc.sh
aslp_scripts/vad/: apply_energy_vad.sh  apply_nn_vad.sh  calc_auc.sh  calc_eer.sh  do_vad_segment.sh  gen_textgrid.py  gen_textgrid_according_vad_interval.py  prepare_feats_ali.sh  run_dnn_vad.sh  run_energy_vad.sh  run_gmm_vad.sh  run_lstm_vad.sh  (+2 more)
src/: Makefile  aslp.mk
src/warp-ctc/: CMakeLists.txt  Makefile
(+278 files in other folders)
